--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.2
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.2
@@ -1,6 +1,9 @@
 /**
- * V 1.1 of Multisensor 6 code
- *	known issues : preferences do not seem to affect configuration, secure pairing is the most tested method at the moment. when clicking the action button on *  the sensor, click two times quickly to pair secured. Still not seeing anything other than 0 for ultraviolet. Also, temp and humidity seem to be off about 6 *	degrees warmer and 7 percent humidity lower than actual, though your sensor may vary.
+ * V 1.2 of Multisensor 6 code
+ *	known issues : preferences do not seem to affect configuration,
+ *	Not seeing anything other than 0 for ultraviolet.
+ *	temp and humidity seem to be off about 6 *	degrees warmer and 7 percent humidity lower than actual
+ *	FIXED: battery tile added, vibration tile removed and touch capability and tile added and status updates are working, thanks TIM YUHL for the code review and sanity check!
  
  *  Original code for gen5 Copyright 2015 SmartThings, modified for use on gen 6 by Robert Vandervoort
  *
@@ -17,6 +20,7 @@
 metadata {
 	definition (name: "Aeon Multisensor 6", namespace: "robertvandervoort", author: "Robert Vandervoort") {
 		capability "Motion Sensor"
+		capability "Touch Sensor"
 		capability "Temperature Measurement"
 		capability "Relative Humidity Measurement"
 		capability "Illuminance Measurement"
@@ -28,8 +32,8 @@ metadata {
 	simulator {
 		status "no motion" : "command: 9881, payload: 00300300"
 		status "motion"    : "command: 9881, payload: 003003FF"
-        status "no vibration" : " command: 9881, payload: 0071050000000007030000"
-        status "vibration" : "command: 9881, payload: 007105000000FF07030000"
+        status "no touch" : " command: 9881, payload: 0071050000000007030000"
+        status "touch" : "command: 9881, payload: 007105000000FF07030000"
         
         for (int i = 0; i <= 100; i += 20) {
 			status "temperature ${i}F": new physicalgraph.zwave.Zwave().securityV1.securityMessageEncapsulation().encapsulate(
@@ -101,15 +105,37 @@ metadata {
 			}
 		valueTile(
         	"illuminance","device.illuminance",inactiveLabel: false) {
-            	state "luminosity",label:'${currentValue} ${unit}',unit:"lux"
+            	state "luminosity",label:'${currentValue} ${unit}', unit:"lux", backgroundColors:[
+                	[value: 0, color: "#000000"],
+                    [value: 47, color: "#1A1A0A"],
+                    [value: 94, color: "#333314"],
+					[value: 141, color: "#4C4C1F"],
+					[value: 188, color: "#666629"],
+					[value: 235, color: "#808033"],
+					[value: 282, color: "#99993D"],
+					[value: 329, color: "#B2B247"],
+					[value: 376, color: "#CCCC52"],
+					[value: 423, color: "#E6E65C"],
+					[value: 470, color: "#FFFF66"],
+					[value: 517, color: "#FFFF75"],
+                    [value: 564, color: "#FFFF85"],
+                    [value: 611, color: "#FFFF94"],
+                    [value: 658, color: "#FFFFA3"],
+                    [value: 705, color: "#FFFFB2"],
+                    [value: 752, color: "#FFFFC2"],
+                    [value: 799, color: "#FFFFD1"],
+                    [value: 846, color: "#FFFFE0"],
+                    [value: 900, color: "#FFFFF0"],
+                    [value: 1000, color: "#FFFFFF"],
+				]
 			}
 		valueTile(
         	"ultraviolet","device.ultraviolet",inactiveLabel: false) {
-				state "ultraviolet",label:'UV ${currentValue} ${unit}',unit:""
+				state "ultraviolet",label:'${currentValue} UV',unit:"UV"
 			}
 		standardTile(
-        	"vibration","device.vibration") {
-				state "active",label:'vibration',icon:"st.motion.motion.active",backgroundColor:"#ff0000"
+        	"touch","device.touch") {
+				state "touched",label:'touched',icon:"st.motion.motion.active",backgroundColor:"#ff0000"
                 state "inactive",label:'calm',icon:"st.motion.motion.inactive",backgroundColor:"#00ff00"
 			}
 		valueTile(
@@ -117,14 +143,14 @@ metadata {
 			state "battery", label:'${currentValue}% battery', unit:""
 		}
 		standardTile(
-        	"configureAfterSecure","device.configure",inactiveLabel: false,decoration: "flat") {
-				state "configure",label:'',action:"configureAfterSecure",icon:"st.secondary.configure"
+        	"configure","device.configure",inactiveLabel: false,decoration: "flat") {
+				state "configure",label:'',action:"configure",icon:"st.secondary.configure"
 			}
 		main([
-        	"motion","temperature","humidity","illuminance","ultraviolet"
+        	"motion","touch","temperature","humidity","illuminance","ultraviolet"
             ])
 		details([
-        	"motion","temperature","humidity","illuminance","ultraviolet","battery","configureAfterSecure"
+        	"motion","touch","temperature","humidity","illuminance","ultraviolet","battery","configureAfterSecure"
             ])
 	}
     preferences {
@@ -272,22 +298,22 @@ def motionEvent(value) {
 	}
 	createEvent(map)
 }
-def vibrationEvent(value) {
-	def map = [name: "vibration"]
+def touchEvent(value) {
+	def map = [name: "touch"]
 	if (value == 255) {
-		map.value = "active"
-		map.descriptionText = "$device.displayName detected vibration"
+    	log.debug "-------------touched------------------"
+		map.value = "touched"
+		map.descriptionText = "$device.displayName detected touch"
 	} else { 
-		log.debug "-------------Vibration inactive------------------"
+		log.debug "-------------touch inactive-----------"
 		map.value = "inactive"
-		map.descriptionText = "$device.displayName vibration has stopped"
+		map.descriptionText = "$device.displayName touch has stopped"
 	}
 	createEvent(map)
 }
 def zwaveEvent(physicalgraph.zwave.commands.sensorbinaryv2.SensorBinaryReport cmd) {
 	motionEvent(cmd.sensorValue)
 }
-
 
 def zwaveEvent(physicalgraph.zwave.commands.basicv1.BasicSet cmd) {
 	log.debug "Basic Set 255 triggered motion event"
@@ -299,12 +325,12 @@ def zwaveEvent(physicalgraph.zwave.commands.notificationv3.NotificationReport cm
 		log.debug "notification type 7 event 8 triggered motion event"
 		motionEvent(cmd.notificationStatus)
 	} else if (cmd.notificationType == 7 && cmd.event == 0) {
-		log.debug "notification type 7 event 0 motion and vibration cleared"
-		motionEvent(cmd.notificationStatus)
-		vibrationEvent(cmd.notificationStatus)
+		log.debug "notification type 7 event 0 motion and touch cleared"
+		motionEvent(0)
+		touchEvent(0)
 	} else if (cmd.notificationType == 7 && cmd.event == 3) {
-		log.debug "notification type 7 event 3 triggered vibration event"
-		vibrationEvent(cmd.notificationStatus)
+		log.debug "notification type 7 event 3 triggered touch event"
+		touchEvent(cmd.notificationStatus)
 	} else {
 		createEvent(descriptionText: cmd.toString(), isStateChange: false)
 	}
@@ -359,7 +385,7 @@ def configureAfterSecure() {
         zwave.configurationV1.configurationSet(parameterNumber: 0x04, size: 1, scaledConfigurationValue: 0),
 		// send binary sensor report instead of basic set for motion
 		zwave.configurationV1.configurationSet(parameterNumber: 0x05, size: 1, scaledConfigurationValue: 2),
-		// Enable the function of vibration sensor
+		// Enable the function of touch sensor
         zwave.configurationV1.configurationSet(parameterNumber: 0x07, size: 1, scaledConfigurationValue: 1),
 		// disable notification-style motion events
 		zwave.notificationV3.notificationSet(notificationType: 7, notificationStatus: 0),
@@ -387,14 +413,37 @@ def configureAfterSecure() {
 def configure() {
     //["delay 30000"] + secure(zwave.securityV1.securityCommandsSupportedGet())
     log.debug "configure()"
-   	def reportIntervalSecs = 4;
-    	if (reportInterval) {
-		reportIntervalSecs = reportInterval.toInteger()
-		}
+
+	def PIRsens = 64
+	if (PIRsensitivity) {
+		PIRsens=PIRsensitivity.toInteger()
+	}
+	def ReportingInt = 4
+	if (ReportingInterval) {
+		ReportingInt=ReportingInterval.toInteger()
+	}
+	def tempoff = 0
+	if (tempoffset) {
+		tempoff=tempoffset.toInteger()
+	}
+	def humidityoff = 0
+	if (humidityoffset) {
+		humidityoff=humidityoffset.toInteger()
+	}
+	def luminanceoff = 0
+	if (luminanceoffset) {
+		luminanceoff=luminanceoffset.toInteger()
+	}
+	def ultravioletoff = 0
+	if (ultravioletoffset) {
+		ultravioletoff=ultravioletoffset.toInteger()
+	}
+    log.debug "PIRsens: $PIRsens, ReportingInt: $ReportingInt, Tempoffset: $tempoff, Humidityoff: $humidityoff, Luminanceoff: $luminanceoff, UVoff: $ultravioletoff"
+
 	delayBetween([
 		// send temperature, humidity, illuminance, ultraviolet and battery every 8 minutes or as defined by preference
 		zwave.configurationV1.configurationSet(parameterNumber: 0x65, size: 4, scaledConfigurationValue: 128|64|32|16|1).format(),
-		zwave.configurationV1.configurationSet(parameterNumber: 0x6F, size: 4, scaledConfigurationValue: reportIntervalSecs).format(),
+		zwave.configurationV1.configurationSet(parameterNumber: 0x6F, size: 4, scaledConfigurationValue: ReportingInt).format(),
 
 		// send battery every 20 hours
 		zwave.configurationV1.configurationSet(parameterNumber: 0x66, size: 4, scaledConfigurationValue: 1).format(),
@@ -404,31 +453,31 @@ def configure() {
 		zwave.configurationV1.configurationSet(parameterNumber: 0x03, size: 2, scaledConfigurationValue: 60).format(),
 
 		// enable motion sensor
-        zwave.configurationV1.configurationSet(parameterNumber: 0x04, size: 1, scaledConfigurationValue: 0).format(),
+        zwave.configurationV1.configurationSet(parameterNumber: 0x04, size: 1, scaledConfigurationValue: 1).format(),
 
 		// send binary sensor report instead of basic set for motion
 		zwave.configurationV1.configurationSet(parameterNumber: 0x05, size: 1, scaledConfigurationValue: 2).format(),
 
 		// configure PIR sensitivity for multisensor 6 min to max 0-127 default 64
-        zwave.configurationV1.configurationSet(parameterNumber: 0x06, size: 1, scaledConfigurationValue: 64).format(),
+        zwave.configurationV1.configurationSet(parameterNumber: 0x06, size: 1, scaledConfigurationValue: PIRsens).format(),
 
-		// Enable the function of vibration sensor
+		// Enable the function of touch sensor
         zwave.configurationV1.configurationSet(parameterNumber: 0x07, size: 1, scaledConfigurationValue: 1).format(),
 
 		// disable notification-style motion events
 		zwave.notificationV3.notificationSet(notificationType: 7, notificationStatus: 0).format(),
         
         // configure temp offset
-        zwave.configurationV1.configurationSet(parameterNumber: 0xC9, size: 2, scaledConfigurationValue: 20).format(),
+        zwave.configurationV1.configurationSet(parameterNumber: 0xC9, size: 2, scaledConfigurationValue: tempoff).format(),
         
         // configure humidity offset
-        zwave.configurationV1.configurationSet(parameterNumber: 0xCA, size: 2, scaledConfigurationValue: 20).format(),
+        zwave.configurationV1.configurationSet(parameterNumber: 0xCA, size: 2, scaledConfigurationValue: humidityoff).format(),
         
         // configure luminance offset
-        zwave.configurationV1.configurationSet(parameterNumber: 0xCB, size: 2, scaledConfigurationValue: 0).format(),
+        zwave.configurationV1.configurationSet(parameterNumber: 0xCB, size: 2, scaledConfigurationValue: luminanceoff).format(),
         
         // configure ultraviolet offset
-        zwave.configurationV1.configurationSet(parameterNumber: 0xCC, size: 2, scaledConfigurationValue: 5).format(),
+        zwave.configurationV1.configurationSet(parameterNumber: 0xCC, size: 2, scaledConfigurationValue: ultravioletoff).format(),
         
 		zwave.batteryV1.batteryGet(),
 		zwave.sensorBinaryV2.sensorBinaryGet(),
@@ -457,9 +506,8 @@ private secure(physicalgraph.zwave.Command cmd) {
 private secureSequence(commands, delay=200) {
 	delayBetween(commands.collect{ secure(it) }, delay)
 }
-
 def updated() {
 	log.debug "updated()"
     log.debug "PIRsensitivity: $PIRsensitivity, Reporting Interval: $ReportingInterval, Temp offset: $tempoffset, Humidity offset: $humidityoffset, Luminance offset: $luminanceoffset, UV offset: $ultravioletoffset"
-    configureAfterSecure()
+    configure()
 }
