--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.3
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.3
@@ -1,12 +1,7 @@
 /**
- * V 1.2 of Multisensor 6 code
- *	known issues : preferences do not seem to affect configuration,
- *	Not seeing anything other than 0 for ultraviolet.
- *	temp and humidity seem to be off about 6 *	degrees warmer and 7 percent humidity lower than actual
- *	FIXED: battery tile added, vibration tile removed and touch capability and tile added and status updates are working, thanks TIM YUHL for the code review and sanity check!
- 
- *  Original code for gen5 Copyright 2015 SmartThings, modified for use on gen 6 by Robert Vandervoort
- *
+ * V 1.3 of Multisensor 6 code 9/14/2015
+ *  Original code for gen5 Copyright 2015 SmartThings, modified for use on Multisensor 6 by Robert Vandervoort 6/19/2015
+ * 
  *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  *  in compliance with the License. You may obtain a copy of the License at:
  *
